--- a/spring-boot-websocket/src/main/resources/static/index.html
+++ b/spring-boot-websocket/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 <title>Spring Boot WebSocket Chat Application | SANDU</title>
 <link rel="stylesheet" href="/css/main.css" />
 </head>
-<body background="Untitled design.jpg"
+<body background="h.jpg"
 	style="background-position: center; background-repeat: no-repeat; background-size: cover;">
 	<noscript>
 		<h2>Sorry! Your browser doesn't support Javascript</h2>
@@ -31,7 +31,7 @@
 	<div id="chat-page" class="hidden">
 		<div class="chat-container">
 			<div class="chat-header">
-				<h2>JavaTechie Global Chat Box</h2>
+				<h2>-- Global Chat Box--</h2>
 			</div>
 			<div class="connecting">Connecting...</div>
 			<ul id="messageArea">
